--- a/0x00-semantic_html/0-index.html
+++ b/0x00-semantic_html/0-index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Semantic HTML Example</title>
+  <meta name="description" content="A blog post about semantic HTML and accessibility practices">
+  <meta name="keywords" content="HTML, Semantic, Accessibility, Blog, SEO">
+  <meta name="author" content="Your Name">
+  <title>Semantic Html Blog Pos</title>
 </head>
 <body>
 
