--- a/0x02-tailwind-css/src/3-index.html
+++ b/0x02-tailwind-css/src/3-index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="A blog post about semantic HTML and accessibility practices">
     <meta name="keywords" content="HTML, Semantic, Accessibility, Blog, SEO">
     <meta name="author" content="Your Name">
-    <link href="./dist/output.css" rel="stylesheet">
+    <link href="output.css" rel="stylesheet">
     <title>Semantic Html Blog Pos</title>
   </head>
   <body>
